--- a/style.css
+++ b/style.css
@@ -16,12 +16,25 @@ body {
     background-position: center;
     background-repeat: no-repeat; 
     background-size: cover;
+    background-size: 100% 100%;
+    animation: shrink 1.5s reverse;
+}
+
+@keyframes shrink {
+    0% {
+      background-size: 100% 100%;
+    }
+    100% {
+      background-size: 110% 110%;
+    }
+  }
 }
 
 header{
     /*animation: bodybg 2s 0s linear infinite alternate;*/
     font-size: 25pt;
-    font-style: italic; 
+    font-style: italic;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #titlecontainer{
