--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 header{
     /*animation: bodybg 2s 0s linear infinite alternate;*/
-    font-size: 25pt;
+    font-size: 50px;
     font-style: italic;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
