--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header{
     display: flex;
     justify-content: center;
     padding: 40px;
-    font-size: 50px;
+    font-size: 25pt;
     font-style: italic;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
