--- a/style.css
+++ b/style.css
@@ -12,10 +12,9 @@ body {
     font-family: 'Roboto Mono', monospace;
     font-size: 11pt;
     cursor: default;
-    background-image: url("Imagens/universe.jpg");
+    background-image: url("Imagens/universe3.jpg");
     background-position: center;
     background-repeat: no-repeat; 
-    background-size: cover;
     background-size: 100% 100%;
     animation: shrink 1.5s reverse;
 }
@@ -28,19 +27,18 @@ body {
       background-size: 110% 110%;
     }
   }
-}
 
 header{
-    /*animation: bodybg 2s 0s linear infinite alternate;*/    
+    /*animation: bodybg 2s 0s linear infinite alternate;*/
+    font-size: 25pt;
+    font-style: italic;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #titlecontainer{
     display: flex;
     justify-content: center;
     padding: 40px;
-    font-size: 25pt;
-    font-style: italic;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /*
@@ -76,6 +74,12 @@ p{
 
 .sophiatext a{
     color: limegreen;
+    transition: 0.3s ease-in-out;
+}
+
+.sophiatext a:hover{
+    color: red;
+    transition: 0.3s ease-in-out;
 }
 
 #sophiacontainer{
@@ -86,6 +90,12 @@ p{
 
 .sophiaimg{
     border-radius: 20px;
+    transition: 0.3s ease-in-out;
+}
+
+.sophiaimg:hover{
+    opacity: 80%;
+    transition: 0.3s ease-in-out;
 }
 
 button{
@@ -103,13 +113,13 @@ button{
     text-decoration: none;
     border: none;
     outline: none;
-    transition: 1s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 button:hover{
     background-color: purple;
     color: whitesmoke;
-    transition: 1s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 #luciano{
@@ -120,8 +130,10 @@ button:hover{
     margin-right: auto;
     border-radius: 20px;
     opacity: 1;
-    transition: opacity 1s;
+    transition: 0.5s;
 }
+
+
 
 #luciano.hide {
     opacity: 0;
